---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
## `check.js`

```js
if

```

# Emitted Messages

```block
error[SyntaxError]: expected `(` but instead the file ends
  ┌─ check.js:2:1
  │
2 │ 
  │ ^ the file ends here


```


